hacked the hotty layout file because it declared the width for l-branding twice, and pushed the menu down too much - this needs fixing properly

--- a/sites/default/themes/hot/css/layouts/hotty/hotty.layout.css
+++ b/sites/default/themes/hot/css/layouts/hotty/hotty.layout.css
@@ -58,7 +58,7 @@
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/home\/felix\/Sites\/hot\/sites\/default\/themes\/hot\/sass\/layouts\/hotty\/hotty\.layout\.scss}line{font-family:\0000354}}
   .l-branding {
-    width: 32.20339%;
+/*    width: 32.20339%; */
     float: left;
     margin-right: 1.69492%;
   }
@@ -100,7 +100,7 @@
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/home\/felix\/Sites\/hot\/sites\/default\/themes\/hot\/sass\/layouts\/hotty\/hotty\.layout\.scss}line{font-family:\0000383}}
   .l-branding {
-    width: 36.70886%;
+/*    width: 36.70886%; */
     float: left;
     margin-right: 1.26582%;
   }
